syntax = "proto3";

option go_package = "./protos";

package test;

import "google/protobuf/any.proto";

service Greeter {
	rpc SayHello(HelloRequest) returns(HelloResponse){}
	rpc Any(Request)returns(Request){}
	rpc TryError(TryErrorReq) returns (TryErrorResp){}
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}

message Request {
	int32 id = 1;
	google.protobuf.Any data = 2;
}

message TryErrorReq {
	string hello = 1;
}

message TryErrorResp {
	string world = 1;
}